@@ -30,13 +30,17 @@ GCONF_REQUIRED=1.1.11
 DBUS_REQUIRED=0.60
 
 PKG_CHECK_MODULES(ATOMATO, 
-		  gtk+-2.0       >= $GTK_REQUIRED 
-		  libglade-2.0   >= $LIBGLADE_REQUIRED 
-		  gconf-2.0      >= $GCONF_REQUIRED
+		  glib-2.0       >= $GTK_REQUIRED 
 		  libxml-2.0
 		  dbus-glib-1	 >= $DBUS_REQUIRED)
 AC_SUBST(ATOMATO_CFLAGS)
 AC_SUBST(ATOMATO_LIBS)
+
+PKG_CHECK_MODULES(ATOMATO_GUI,
+  		  libglade-2.0   >= $LIBGLADE_REQUIRED 
+		  gconf-2.0      >= $GCONF_REQUIRED)
+AC_SUBST(ATOMATO_GUI_CFLAGS)
+AC_SUBST(ATOMATO_GUI_LIBS)
 
 dnl
 dnl Translations
@@ -57,5 +61,6 @@ AC_CONFIG_FILES([
 Makefile
 po/Makefile.in
 libatomato/Makefile
+src/Makefile
 tests/Makefile])
 AC_OUTPUT
